[package]
name = "xsteps"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13.1"
eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image"] }
futures = "0.3.25"
futures-util = "0.3.25"
parking_lot = { version = "0.12.1", features = ["serde"] }
rdev = "0.5.2"
screenshots = "0.4.5"
tokio = { version = "1.22.0", features = [
    "tracing",
    "rt-multi-thread",
    "rt",
    "macros",
    "parking_lot",
    "sync"
] }
image = { version = "0.24", features = ["png", "rgb"], default-features = false }
once_cell = "1.16.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.rgb]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.color_quant]
opt-level = 3
[profile.dev.package.egui]
opt-level = 3
